# ManageTG

./: .gitignore  Dockerfile  README.MD  READMEapi.MD  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  session_+79992202665.session  settings.py
alembic/: env.py
alembic/versions/: 00a846b01e6d_initial.py  0b0cee5e9df8_create_proxy_table.py  0e59ac5fff54_updated_models2.py  110b89f9b5e5_update_table_view.py  1c7a7ac9e813_new_migrate2.py  205e44563cf1_mini_fix.py  26725e02394c_initial_migration.py  448008ea62d5_update_table_comment.py  4de146a47f9d_updated_models.py  54d7182d9ecb_updated_models.py  6458036fed28_initial_migration3.py  6c0c6714fe35_удаление_поля_status.py  6d3d935834b6_update_action_table.py  7a6c6506b678_new_migrate.py  (+6 more)
app/: alembic.ini  config.py  main.py  settings.py
database/: database.py  enum_db.py  models.py
repositories/: accounts_repo.py  actions_repo.py  auth_repo.py  channels_repo.py  comments_repo.py  launching_repo.py  proxy_repo.py  reactions_repo.py  views_repo.py
routers/: __init__.py  accounts.py  actions.py  auth.py  channels.py  commenting.py  control.py  launching_actions.py  proxy.py  reactions.py  views.py  сommenting.py
schema_pydantic/: schema_actions.py  schema_auth.py  schema_channels.py  schema_comment.py  schema_reaction.py
scripts/: entrypoint.sh
services/: auth_manager.py  commenting_logic.py  openai_service.py  pyrogram_service.py  reaction_service.py  session_control.py  start_commenting.py  telegram_auth.py  view_service.py
sessions/: session_+79992202665.session
(+43 files in other folders)
