[project]
name = "managetg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.9.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "openai==1.72.0",
    "packaging~=25.0",
    "pyaes==1.6.1",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pyrogram==2.0.106",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.1",
    "tgcrypto==1.2.5",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.0",
]
